[project]
name = "onsen-clusters-viewer"
version = "0.1.0"
description = "温泉クラスタ サマリービューア"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.0,<3",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "streamlit>=1.30",
    "streamlit-folium>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
